--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
     "vue": "^3.0.0-0",
