--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "marked": "^1.2.0",
+    "mavon-editor": "^2.7.4",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
     "vue": "^3.0.0-0",
