--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/marked": "^1.1.0",
     "axios": "^0.20.0",
-    "marked": "^1.2.0",
+    "marked": "^1.2.2",
     "mavon-editor": "^2.7.4",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
